# recomendador-filmes

./: .env.example  .gitignore  README.md  app.py  modelo_recomendacao.h5  movies.db  pyproject.toml  recomendador_filmes.ipynb  requirements.txt
.github/workflows/: ci.yml
